--- a/README.Rmd
+++ b/README.Rmd
@@ -7,16 +7,27 @@ output:
     variant: markdown_github
 ---
 
-```{r, echo = FALSE}
+```{r, echo = FALSE, include=FALSE}
 library(dplyr)
+library(pheatmap)
 library(ggplot2)
 library(PDclust, lib.loc = "~/dev")
-knitr::opts_chunk$set(collapse = TRUE, comment = "#>")
+knitr::opts_chunk$set(collapse = TRUE, comment = "#>", fig.width = 4, fig.height = 3, dpi = 150)
 ```
 
-This package is based off the original PDclust publication <insert citation here>.
+This package is based off the original PDclust publication \<insert citation here\>.
 
 The workflow for doing PDclust is as follows:
+
+## Step 0: Install
+
+Easily install this package with `devtools`:
+
+```
+devtools::install_github("hui-tony-zk/PDclust")
+```
+
+Warning: this package requires the `tidyverse` suite of packages to work. I recommend you  `install.packages(tidyverse)` first. If you're unfamiliar with the `tidyverse` suite, I highly recommend you learn more about it.
 
 ## Step 1: Read in files
 
@@ -68,10 +79,10 @@ cpg_files_pairwise_matrix
 
 ### A) Generating clusters with PDclust
 
-This step clusters the single-cells together with `cluster_distances()`
+This step clusters the single-cells together with `cluster_dissimilarity()`
 
 ```{r}
-cluster_results <- cluster_distances(cpg_files_pairwise_matrix, num_clusters = 2)
+cluster_results <- cluster_dissimilarity(cpg_files_pairwise_matrix, num_clusters = 2)
 ```
 
 You can plot the resulting cluster results:
@@ -85,6 +96,22 @@ plot(cluster_results$hclust_obj)
 ```{r}
 cluster_results$cluster_assignments
 ```
+
+... or use a fancy heatmap
+
+```{r}
+heatmap_pallete <- colorRampPalette(RColorBrewer::brewer.pal(8, name = "YlOrRd"))(21)
+
+pheatmap(cpg_files_pairwise_matrix,
+         cluster_rows = cluster_results$hclust_obj,
+         cluster_cols = cluster_results$hclust_obj,
+         treeheight_row = 0,
+         border_color = NA,
+         color = heatmap_pallete,
+         show_colnames = F,
+         annotation_col = cluster_results$cluster_assignments)
+```
+
 
 ## B) Visualize the cluster separation:
 
